force-app/main/default/objects/SCAR_Vendor_Form_Email__c/SCAR_Vendor_Form_Email__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>SCAR Vendor Form Email</label>
</CustomObject>