force-app/main/default/objects/SCAR_Vendor_Form_Email__c/fields/Second_Notification_Days__c.field-meta.xml
<CustomField>
    <fullName>Second_Notification_Days__c</fullName>
    <label>Second Notification Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>