force-app/main/default/objects/SCAR_Vendor_Form_Email__c/fields/SuccessPageURL__c.field-meta.xml
<CustomField>
    <fullName>SuccessPageURL__c</fullName>
    <label>SuccessPageURL</label>
    <type>Url</type>
</CustomField>